# Maki

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dockerfile.bash  install.bash  maki.tar.REMOVED.git-id  note.txt
evaluation/: analyze_macro_invocations_in_program.py  config.py.in  evaluation_programs_all.py
evaluation/figure_data/: all_raw_data.csv
evaluation/time_data/: definition_analysis_times.csv  total_time_analysis.csv
src/: AlignmentMatchers.cc  AlignmentMatchers.hh  CMakeLists.txt  Cpp2CASTConsumer.cc  Cpp2CASTConsumer.hh  Cpp2CAction.cc  Cpp2CAction.hh  DeclStmtTypeLoc.cc  DeclStmtTypeLoc.hh  IncludeCollector.cc  IncludeCollector.hh
